methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:3: error: value update is not a member of Boolean
   while (estSurBiscuit()=false){
          ^SlugTracking:9: error: not found: value reculer
           reculer()
           ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
   while (estSurBiscuit()=false){
   ^